--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -265,11 +265,11 @@ jobs:
           mpif90 -show
         if: ${{ matrix.mpi != 'msmpi' }}
 
-      - name: Override CC/CXX compilers
-        run: |
-          echo "CC=gcc" >> $GITHUB_ENV
-          echo "CXX=g++" >> $GITHUB_ENV
-        if: ${{ runner.os == 'Linux' }}
+      # - name: Override CC/CXX compilers
+      #   run: |
+      #     echo "CC=gcc" >> $GITHUB_ENV
+      #     echo "CXX=g++" >> $GITHUB_ENV
+      #   if: ${{ runner.os == 'Linux' }}
 
       - run: sudo apt-get -y update && sudo apt-get install -y ninja-build
         if: ${{ runner.os == 'Linux' }}
