--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -283,7 +283,8 @@ endif()
 ## message(STATUS "CMAKE_Fortran_COMPILER_ID=${CMAKE_Fortran_COMPILER_ID}")
 ## message(STATUS "CMAKE_CXX_COMPILER_ID=${CMAKE_CXX_COMPILER_ID}")
 # if(MSVC AND DEFINED ENV{ONEAPI_ROOT} AND NOT DEFINED ENV{GITHUB_ACTIONS})
-if(CMAKE_GENERATOR MATCHES "Visual Studio" AND DEFINED ENV{ONEAPI_ROOT})
+# if(CMAKE_GENERATOR MATCHES "Visual Studio" AND DEFINED ENV{ONEAPI_ROOT})
+if(DEFINED ENV{ONEAPI_ROOT})
   if(WIN32 AND (${CMAKE_Fortran_COMPILER_ID} MATCHES "Intel") OR (${CMAKE_CXX_COMPILER_ID} MATCHES "Intel"))
     if(CMAKE_SIZEOF_VOID_P EQUAL 8)
       set_tests_properties(TestRM PROPERTIES ENVIRONMENT "PATH=$ENV{ONEAPI_ROOT}\\compiler\\latest\\windows\\redist\\intel64_win\\compiler;$ENV{PATH}")
