--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -56,7 +56,7 @@ jobs:
             toolchain: {compiler: intel-classic, version: '2021.7'}
 
     steps:
-      - uses: fortran-lang/setup-fortran@v1.3
+      - uses: scharlton2/setup-fortran@v1.4
         id: setup-fortran
         with:
           compiler: ${{ matrix.toolchain.compiler }}
@@ -315,17 +315,31 @@ jobs:
           -L
         if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
 
-      - run: >
-          cmake -G Ninja
-          -B ${{ github.workspace }}/build-mpi
-          -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
-          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-          -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
-          -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
-          -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
-          -S ${{ github.workspace }}
+      - run: |
+          %ComSpec% /E:ON /K ""C:\Program Files (x86)\Intel\oneAPI\setvars.bat" intel64 vs2019"
+          cmake -G Ninja ^
+          -B ${{ github.workspace }}/build-mpi ^
+          -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }} ^
+          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} ^
+          -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }} ^
+          -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }} ^
+          -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }} ^
+          -S ${{ github.workspace }} ^
           -L
+        shell: cmd
         if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' }}
+
+      # - run: >
+      #     cmake -G Ninja
+      #     -B ${{ github.workspace }}/build-mpi
+      #     -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
+      #     -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+      #     -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
+      #     -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
+      #     -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
+      #     -S ${{ github.workspace }}
+      #     -L
+      #     if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' }}
 
       - run: cmake --build ${{ github.workspace }}/build-mpi
 
