--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -318,6 +318,7 @@ jobs:
         if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
 
       - run: |
+          set PATH=
           set SETVARS_COMPLETED=
           "C:\Program Files (x86)\Intel\oneAPI\setvars.bat" intel64 vs2019
           cmake -G Ninja ^
