--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -321,15 +321,12 @@ jobs:
           set PATH=C:\Windows\System32
           set SETVARS_COMPLETED=
           "C:\Program Files (x86)\Intel\oneAPI\setvars.bat" intel64 vs2019
-          cmake -G Ninja ^
-          -B ${{ github.workspace }}/build-mpi ^
-          -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }} ^
-          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} ^
-          -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }} ^
-          -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }} ^
-          -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }} ^
-          -S ${{ github.workspace }} ^
-          -L
+          set
+          where icl
+          where icx
+          where ifort
+          where ifx
+          where cmake
         shell: cmd
         if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' }}
 
