--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -317,8 +317,12 @@ jobs:
           -L
         if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
 
+      - run: Get-Command cmake
+
+      - run: Get-Content "C:\Program Files (x86)\Intel\oneAPI\setvars.bat"
+
       - run: |
-          REM set PATH=C:\Windows\System32
+          set PATH=C:\Windows\System32;C:\Program Files\CMake\bin
           set SETVARS_COMPLETED=
           call "C:\Program Files (x86)\Intel\oneAPI\setvars.bat" intel64 vs2019
           set
@@ -327,6 +331,15 @@ jobs:
           where ifort
           where ifx
           where cmake
+          cmake -G Ninja                                                           ^
+          -B ${{ github.workspace }}/build-mpi                                     ^
+          -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}                 ^
+          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}                              ^
+          -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}             ^
+          -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }} ^
+          -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}          ^
+          -S ${{ github.workspace }}                                               ^
+          -L
         shell: cmd
         if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' }}
 
