--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -324,7 +324,7 @@ jobs:
       - run: Get-Content "C:\Program Files (x86)\Intel\oneAPI\setvars.bat"
 
       - run: |
-          set PATH=C:\Windows\System32;C:\Program Files\CMake\bin
+          set PATH=C:\Windows\System32;C:\Program Files\CMake\bin;C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\CommonExtensions\Microsoft\CMake\Ninja
           set SETVARS_COMPLETED=
           call "C:\Program Files (x86)\Intel\oneAPI\setvars.bat" intel64 vs2019
           set
@@ -333,6 +333,7 @@ jobs:
           where ifort
           where ifx
           where cmake
+          where ninja
           cmake -G Ninja                                                           ^
           -B ${{ github.workspace }}/build-mpi                                     ^
           -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}                 ^
