--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -176,8 +176,7 @@ jobs:
       fail-fast: false
       matrix:
         # os: [ubuntu-22.04, macos-12, windows-2019, windows-2022]
-        # os: [windows-2019, windows-2022]
-        os: [windows-2019]
+        os: [windows-2019, windows-2022]
         toolchain:
           # - {compiler: gcc, version: 9}
           - {compiler: gcc, version: 13}
@@ -304,8 +303,29 @@ jobs:
       #   with:
       #     arch: x64
 
+      - run: Get-Command cmake
+
+      - run: Get-Command ninja
+
+      - run: Get-Content "C:\Program Files (x86)\Intel\oneAPI\setvars.bat"
+
+      - run: Get-FileHash "C:\Program Files (x86)\Intel\oneAPI\setvars.bat"
+
+      - run: 'gci env: | Format-Table -Wrap -AutoSize'
+        if: ${{ runner.os == 'Windows' }}
+
+      - run: |
+          where icl
+          where icx
+          where ifort
+          where ifx
+          where cmake
+          where ninja
+        if: ${{ runner.os == 'Windows' }}
+
       - run: >
-          cmake -G Ninja
+          cmake
+          -G Ninja
           -B ${{ github.workspace }}/build-mpi
           -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
           -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
@@ -317,48 +337,19 @@ jobs:
           -L
         if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
 
-      - run: Get-Command cmake
-
-      - run: Get-Command ninja
-
-      - run: Get-Content "C:\Program Files (x86)\Intel\oneAPI\setvars.bat"
-
-      - run: 'gci env: | Format-Table -Wrap -AutoSize'
-
-      - run: |
-          # set PATH=C:\Windows\System32;C:\Program Files\CMake\bin;C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\CommonExtensions\Microsoft\CMake\Ninja
-          # set SETVARS_COMPLETED=
-          # call "C:\Program Files (x86)\Intel\oneAPI\setvars.bat" intel64 vs2019
-          # set
-          where icl
-          where icx
-          where ifort
-          where ifx
-          where cmake
-          where ninja
-          cmake -G Ninja                                                           ^
-          -B ${{ github.workspace }}/build-mpi                                     ^
-          -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}                 ^
-          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}                              ^
-          -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}             ^
-          -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }} ^
-          -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}          ^
-          -S ${{ github.workspace }}                                               ^
+      - run: >
+          cmake
+          -G Ninja
+          -B ${{ github.workspace }}/build-mpi
+          -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
+          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+          -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
+          -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
+          -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
+          -S ${{ github.workspace }}
           -L
         shell: cmd
         if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' }}
-
-      # - run: >
-      #     cmake -G Ninja
-      #     -B ${{ github.workspace }}/build-mpi
-      #     -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
-      #     -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-      #     -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
-      #     -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
-      #     -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
-      #     -S ${{ github.workspace }}
-      #     -L
-      #     if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' }}
 
       - run: cmake --build ${{ github.workspace }}/build-mpi
 
