--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -326,7 +326,22 @@ jobs:
           -S ${{ github.workspace }}
           --toolchain ${{ env.VCPKG_INSTALLATION_ROOT }}/scripts/buildsystems/vcpkg.cmake
           -L
-        if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
+        if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' && matrix.mpi != 'msmpi' }}
+
+      - run: >
+          cmake
+          -G Ninja
+          -B ${{ github.workspace }}/build-mpi
+          -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
+          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+          -DMPI_GUESS_LIBRARY_NAME="MSMPI"
+          -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
+          -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
+          -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
+          -S ${{ github.workspace }}
+          --toolchain ${{ env.VCPKG_INSTALLATION_ROOT }}/scripts/buildsystems/vcpkg.cmake
+          -L
+        if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' && matrix.mpi == 'msmpi' }}
 
       - run: >
           cmake
@@ -339,7 +354,21 @@ jobs:
           -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
           -S ${{ github.workspace }}
           -L
-        if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' }}
+        if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' && matrix.mpi != 'msmpi' }}
+
+      - run: >
+          cmake
+          -G Ninja
+          -B ${{ github.workspace }}/build-mpi
+          -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
+          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+          -DMPI_GUESS_LIBRARY_NAME="MSMPI"
+          -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
+          -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
+          -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
+          -S ${{ github.workspace }}
+          -L
+        if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' && matrix.mpi == 'msmpi' }}
 
       - run: cmake --build ${{ github.workspace }}/build-mpi
 
