--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -334,7 +334,7 @@ jobs:
           -B ${{ github.workspace }}/build-mpi
           -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
           -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-          -DMPI_GUESS_LIBRARY_NAME="MSMPI"
+          -DMPI_GUESS_LIBRARY_NAME=MSMPI
           -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
           -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
           -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
@@ -362,7 +362,7 @@ jobs:
           -B ${{ github.workspace }}/build-mpi
           -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
           -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-          -DMPI_GUESS_LIBRARY_NAME="MSMPI"
+          -DMPI_GUESS_LIBRARY_NAME=MSMPI
           -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
           -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
           -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
