--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -268,6 +268,10 @@ jobs:
           mpi: ${{ matrix.mpi }}
         if: ${{ matrix.mpi == 'msmpi' }}
 
+      - name: Disable Strawberry Path
+        run: Move-Item C:\Strawberry C:\XXXStrawberry
+        if: ${{ matrix.mpi == 'msmpi' }}
+
       # - name: Override CC/CXX compilers
       #   run: |
       #     echo "CC=gcc" >> $GITHUB_ENV
