--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -395,12 +395,12 @@ jobs:
           -B ${{ github.workspace }}/build-mpi
           -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
           -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-          -DMPI_C_ADDITIONAL_INCLUDE_DIRS=C:/Program Files (x86)/Microsoft SDKs/MPI/Include
-          -DMPI_C_LIBRARIES=C:/Program Files (x86)/Microsoft SDKs/MPI/Lib/x64/msmpi.lib
-          -DMPI_CXX_ADDITIONAL_INCLUDE_DIRS=C:/Program Files (x86)/Microsoft SDKs/MPI/Include
-          -DMPI_CXX_LIBRARIES=C:/Program Files (x86)/Microsoft SDKs/MPI/Lib/x64/msmpi.lib
-          -DMPI_Fortran_ADDITIONAL_INCLUDE_DIR=C:/Program Files (x86)/Microsoft SDKs/MPI/Include;C:/Program Files (x86)/Microsoft SDKs/MPI/Include/x64
-          -DMPI_Fortran_LIBRARIES=C:/Program Files (x86)/Microsoft SDKs/MPI/Lib/x64/msmpi.lib;C:/Program Files (x86)/Microsoft SDKs/MPI/Lib/x64/msmpifec.lib
+          -'DMPI_C_ADDITIONAL_INCLUDE_DIRS=C:/Program Files (x86)/Microsoft SDKs/MPI/Include'
+          -'DMPI_C_LIBRARIES=C:/Program Files (x86)/Microsoft SDKs/MPI/Lib/x64/msmpi.lib'
+          -'DMPI_CXX_ADDITIONAL_INCLUDE_DIRS=C:/Program Files (x86)/Microsoft SDKs/MPI/Include'
+          -'DMPI_CXX_LIBRARIES=C:/Program Files (x86)/Microsoft SDKs/MPI/Lib/x64/msmpi.lib'
+          -'DMPI_Fortran_ADDITIONAL_INCLUDE_DIR=C:/Program Files (x86)/Microsoft SDKs/MPI/Include;C:/Program Files (x86)/Microsoft SDKs/MPI/Include/x64'
+          -'DMPI_Fortran_LIBRARIES=C:/Program Files (x86)/Microsoft SDKs/MPI/Lib/x64/msmpi.lib;C:/Program Files (x86)/Microsoft SDKs/MPI/Lib/x64/msmpifec.lib'
           -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
           -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
           -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
