--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,9 +50,9 @@ endif()
 # check for MPI
 option(PHREEQCRM_BUILD_MPI "Build MPI configuration" OFF)
 if(PHREEQCRM_BUILD_MPI)
-  set(CMAKE_FIND_DEBUG_MODE TRUE)
+  ##set(CMAKE_FIND_DEBUG_MODE TRUE)
   find_package(MPI REQUIRED)
-  set(CMAKE_FIND_DEBUG_MODE FALSE)
+  ##set(CMAKE_FIND_DEBUG_MODE FALSE)
 endif()
 
 option(PHREEQCRM_BUILD_PYTHON "Build python wrapper using SWIG" OFF)
@@ -563,9 +563,9 @@ else()
   message(STATUS "SKBUILD is NOT defined")
 endif()
 
-message(STATUS "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX")
-get_cmake_property(_variableNames VARIABLES)
-list (SORT _variableNames)
-foreach (_variableName ${_variableNames})
-  message(STATUS "${_variableName}=${${_variableName}}")
-endforeach()
+# message(STATUS "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX")
+# get_cmake_property(_variableNames VARIABLES)
+# list (SORT _variableNames)
+# foreach (_variableName ${_variableNames})
+#   message(STATUS "${_variableName}=${${_variableName}}")
+# endforeach()
