--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -193,8 +193,8 @@ jobs:
           - {compiler: intel-classic, version: '2021.10'}
         build_shared_libs: [ON]
         build_type: [Release]
-        # mpi: ['mpich', 'ompi', 'impi', 'msmpi']  # see https://github.com/mpi4py/setup-mpi/blob/master/setup-mpi.sh
-        mpi: ['msmpi']  # see https://github.com/mpi4py/setup-mpi/blob/master/setup-mpi.sh
+        mpi: ['mpich', 'ompi', 'impi', 'msmpi']  # see https://github.com/mpi4py/setup-mpi/blob/master/setup-mpi.sh
+        # mpi: ['msmpi']  # see https://github.com/mpi4py/setup-mpi/blob/master/setup-mpi.sh
         phreeqcrm_build_mpi: [ON]
         phreeqcrm_fortran_testing: [ON]
         phreeqcrm_with_yaml_cpp: [OFF]
@@ -375,38 +375,38 @@ jobs:
           -L
         if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' && matrix.mpi != 'msmpi' }}
 
-      # - run: >
-      #     cmake
-      #     -G Ninja
-      #     -B ${{ github.workspace }}/build-mpi
-      #     -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
-      #     -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-      #     -DMPI_GUESS_LIBRARY_NAME=MSMPI
-      #     -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
-      #     -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
-      #     -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
-      #     -S ${{ github.workspace }}
-      #     -L
-      #   if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' && matrix.mpi == 'msmpi' }}
-
       - run: >
           cmake
           -G Ninja
           -B ${{ github.workspace }}/build-mpi
           -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
           -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-          -'DMPI_C_ADDITIONAL_INCLUDE_DIRS=C:/Program Files (x86)/Microsoft SDKs/MPI/Include'
-          -'DMPI_C_LIBRARIES=C:/Program Files (x86)/Microsoft SDKs/MPI/Lib/x64/msmpi.lib'
-          -'DMPI_CXX_ADDITIONAL_INCLUDE_DIRS=C:/Program Files (x86)/Microsoft SDKs/MPI/Include'
-          -'DMPI_CXX_LIBRARIES=C:/Program Files (x86)/Microsoft SDKs/MPI/Lib/x64/msmpi.lib'
-          -'DMPI_Fortran_ADDITIONAL_INCLUDE_DIR=C:/Program Files (x86)/Microsoft SDKs/MPI/Include;C:/Program Files (x86)/Microsoft SDKs/MPI/Include/x64'
-          -'DMPI_Fortran_LIBRARIES=C:/Program Files (x86)/Microsoft SDKs/MPI/Lib/x64/msmpi.lib;C:/Program Files (x86)/Microsoft SDKs/MPI/Lib/x64/msmpifec.lib'
+          -DMPI_GUESS_LIBRARY_NAME=MSMPI
           -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
           -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
           -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
           -S ${{ github.workspace }}
           -L
         if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' && matrix.mpi == 'msmpi' }}
+
+      # - run: >
+      #     cmake
+      #     -G Ninja
+      #     -B ${{ github.workspace }}/build-mpi
+      #     -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
+      #     -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+      #     -'DMPI_C_ADDITIONAL_INCLUDE_DIRS=C:/Program Files (x86)/Microsoft SDKs/MPI/Include'
+      #     -'DMPI_C_LIBRARIES=C:/Program Files (x86)/Microsoft SDKs/MPI/Lib/x64/msmpi.lib'
+      #     -'DMPI_CXX_ADDITIONAL_INCLUDE_DIRS=C:/Program Files (x86)/Microsoft SDKs/MPI/Include'
+      #     -'DMPI_CXX_LIBRARIES=C:/Program Files (x86)/Microsoft SDKs/MPI/Lib/x64/msmpi.lib'
+      #     -'DMPI_Fortran_ADDITIONAL_INCLUDE_DIR=C:/Program Files (x86)/Microsoft SDKs/MPI/Include;C:/Program Files (x86)/Microsoft SDKs/MPI/Include/x64'
+      #     -'DMPI_Fortran_LIBRARIES=C:/Program Files (x86)/Microsoft SDKs/MPI/Lib/x64/msmpi.lib;C:/Program Files (x86)/Microsoft SDKs/MPI/Lib/x64/msmpifec.lib'
+      #     -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
+      #     -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
+      #     -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
+      #     -S ${{ github.workspace }}
+      #     -L
+      #   if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' && matrix.mpi == 'msmpi' }}
 
       - run: cmake --build ${{ github.workspace }}/build-mpi
 
