--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -197,7 +197,7 @@ jobs:
         # mpi: ['msmpi']  # see https://github.com/mpi4py/setup-mpi/blob/master/setup-mpi.sh
         phreeqcrm_build_mpi: [ON]
         phreeqcrm_fortran_testing: [ON]
-        phreeqcrm_with_yaml_cpp: [OFF, ON]
+        phreeqcrm_with_yaml_cpp: [ON]
         # include:
         #   - os: macos-12
         #     toolchain: {compiler: gcc, version: 10}
@@ -266,138 +266,157 @@ jobs:
       - run: dir $env:ONEAPI_ROOT/compiler
         if: runner.os == 'Windows'
 
-      # - name: Show mpi compilers
-      #   run: |
-      #     mpicc -show
-      #     mpicxx -show
-      #     mpif90 -show
-      #   if: ${{ matrix.mpi != 'msmpi' }}
+      - run: gh release download 0.8.0 --repo jbeder/yaml-cpp --archive tar.gz
+        if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
 
-      # - name: Setup mpi
-      #   uses: mpi4py/setup-mpi@v1
-      #   with:
-      #     mpi: ${{ matrix.mpi }}
+      - run: tar xvzf yaml-cpp-0.8.0.tar.gz
+        if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
+
+      - run: >
+          cmake
+          -G Ninja
+          -B ${{ github.workspace }}/yaml-cpp-build
+          -DCMAKE_BUILD_TYPE=Release
+          -DCMAKE_INSTALL_PREFIX:=${{ github.workspace }}/yaml-cpp
+          -S ${{ github.workspace }}/yaml-cpp-0.8.0
+        if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
+
+      - run: cmake --build ${{ github.workspace }}/yaml-cpp --target install
+
+      - run: ls
+
+      # # - name: Show mpi compilers
+      # #   run: |
+      # #     mpicc -show
+      # #     mpicxx -show
+      # #     mpif90 -show
+      # #   if: ${{ matrix.mpi != 'msmpi' }}
+
+      # # - name: Setup mpi
+      # #   uses: mpi4py/setup-mpi@v1
+      # #   with:
+      # #     mpi: ${{ matrix.mpi }}
+      # #   if: ${{ matrix.mpi == 'msmpi' }}
+
+      # - name: Disable Strawberry Path
+      #   run: Move-Item C:\Strawberry C:\XXXStrawberry
       #   if: ${{ matrix.mpi == 'msmpi' }}
 
-      - name: Disable Strawberry Path
-        run: Move-Item C:\Strawberry C:\XXXStrawberry
-        if: ${{ matrix.mpi == 'msmpi' }}
+      # # - name: Override CC/CXX compilers
+      # #   run: |
+      # #     echo "CC=gcc" >> $GITHUB_ENV
+      # #     echo "CXX=g++" >> $GITHUB_ENV
+      # #   if: ${{ runner.os == 'Linux' }}
 
-      # - name: Override CC/CXX compilers
-      #   run: |
-      #     echo "CC=gcc" >> $GITHUB_ENV
-      #     echo "CXX=g++" >> $GITHUB_ENV
+      # - run: sudo apt-get -y update && sudo apt-get install -y ninja-build
       #   if: ${{ runner.os == 'Linux' }}
 
-      - run: sudo apt-get -y update && sudo apt-get install -y ninja-build
-        if: ${{ runner.os == 'Linux' }}
+      # - run: brew install ninja
+      #   if: ${{ runner.os == 'macOS' }}
 
-      - run: brew install ninja
-        if: ${{ runner.os == 'macOS' }}
+      # - uses: actions/checkout@v3
 
-      - uses: actions/checkout@v3
+      # # Note: This allows ${{ env.VCPKG_INSTALLATION_ROOT }} to be used in the remaining steps
+      # # Although its already set in the environment it can't be accessed using the env context
+      # # until it is stored in the $GITHUB_ENV file
+      # - run: echo "VCPKG_INSTALLATION_ROOT=$VCPKG_INSTALLATION_ROOT" >> $GITHUB_ENV
+      #   shell: bash
 
-      # Note: This allows ${{ env.VCPKG_INSTALLATION_ROOT }} to be used in the remaining steps
-      # Although its already set in the environment it can't be accessed using the env context
-      # until it is stored in the $GITHUB_ENV file
-      - run: echo "VCPKG_INSTALLATION_ROOT=$VCPKG_INSTALLATION_ROOT" >> $GITHUB_ENV
-        shell: bash
-
-      - run: vcpkg install yaml-cpp:x64-linux
-        if: ${{ runner.os == 'Linux' && matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
+      # - run: vcpkg install yaml-cpp:x64-linux
+      #   if: ${{ runner.os == 'Linux' && matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
   
-      - run: vcpkg install yaml-cpp:x64-osx
-        if: ${{ runner.os == 'macOS' && matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
+      # - run: vcpkg install yaml-cpp:x64-osx
+      #   if: ${{ runner.os == 'macOS' && matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
   
-      - run: vcpkg install yaml-cpp:x64-windows
-        if: ${{ runner.os == 'Windows' && matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
+      # - run: vcpkg install yaml-cpp:x64-windows
+      #   if: ${{ runner.os == 'Windows' && matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
   
-      - run: Get-Command cmake
-        if: ${{ runner.os == 'Windows' }}
+      # - run: Get-Command cmake
+      #   if: ${{ runner.os == 'Windows' }}
 
-      - run: Get-Command ninja
-        if: ${{ runner.os == 'Windows' }}
+      # - run: Get-Command ninja
+      #   if: ${{ runner.os == 'Windows' }}
 
-      - run: Get-Content "C:\Program Files (x86)\Intel\oneAPI\setvars.bat"
-        if: ${{ runner.os == 'Windows' }}
+      # - run: Get-Content "C:\Program Files (x86)\Intel\oneAPI\setvars.bat"
+      #   if: ${{ runner.os == 'Windows' }}
 
-      - run: Get-FileHash "C:\Program Files (x86)\Intel\oneAPI\setvars.bat"
-        if: ${{ runner.os == 'Windows' }}
+      # - run: Get-FileHash "C:\Program Files (x86)\Intel\oneAPI\setvars.bat"
+      #   if: ${{ runner.os == 'Windows' }}
 
-      - run: 'gci env: | Format-Table -Wrap -AutoSize'
-        if: ${{ runner.os == 'Windows' }}
+      # - run: 'gci env: | Format-Table -Wrap -AutoSize'
+      #   if: ${{ runner.os == 'Windows' }}
 
-      - run: |
-          where icl
-          where icx
-          where ifort
-          where ifx
-          where cmake
-          where ninja
-        if: ${{ runner.os == 'Windows' }}
+      # - run: |
+      #     where icl
+      #     where icx
+      #     where ifort
+      #     where ifx
+      #     where cmake
+      #     where ninja
+      #   if: ${{ runner.os == 'Windows' }}
 
-      - run: >
-          cmake
-          -G Ninja
-          -B ${{ github.workspace }}/build-mpi
-          -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
-          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-          -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
-          -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
-          -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
-          -S ${{ github.workspace }}
-          --toolchain ${{ env.VCPKG_INSTALLATION_ROOT }}/scripts/buildsystems/vcpkg.cmake
-          -L
-        if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' && matrix.mpi != 'msmpi' }}
+      # - run: >
+      #     cmake
+      #     -G Ninja
+      #     -B ${{ github.workspace }}/build-mpi
+      #     -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
+      #     -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+      #     -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
+      #     -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
+      #     -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
+      #     -S ${{ github.workspace }}
+      #     --toolchain ${{ env.VCPKG_INSTALLATION_ROOT }}/scripts/buildsystems/vcpkg.cmake
+      #     -L
+      #   if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' && matrix.mpi != 'msmpi' }}
 
-      - run: >
-          cmake
-          -G Ninja
-          -B ${{ github.workspace }}/build-mpi
-          -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
-          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-          -DMPI_GUESS_LIBRARY_NAME=MSMPI
-          -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
-          -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
-          -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
-          -S ${{ github.workspace }}
-          --toolchain ${{ env.VCPKG_INSTALLATION_ROOT }}/scripts/buildsystems/vcpkg.cmake
-          -L
-        if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' && matrix.mpi == 'msmpi' }}
+      # - run: >
+      #     cmake
+      #     -G Ninja
+      #     -B ${{ github.workspace }}/build-mpi
+      #     -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
+      #     -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+      #     -DMPI_GUESS_LIBRARY_NAME=MSMPI
+      #     -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
+      #     -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
+      #     -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
+      #     -S ${{ github.workspace }}
+      #     --toolchain ${{ env.VCPKG_INSTALLATION_ROOT }}/scripts/buildsystems/vcpkg.cmake
+      #     -L
+      #   if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' && matrix.mpi == 'msmpi' }}
 
-      - run: >
-          cmake
-          -G Ninja
-          -B ${{ github.workspace }}/build-mpi
-          -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
-          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-          -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
-          -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
-          -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
-          -S ${{ github.workspace }}
-          -L
-        if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' && matrix.mpi != 'msmpi' }}
+      # - run: >
+      #     cmake
+      #     -G Ninja
+      #     -B ${{ github.workspace }}/build-mpi
+      #     -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
+      #     -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+      #     -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
+      #     -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
+      #     -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
+      #     -S ${{ github.workspace }}
+      #     -L
+      #   if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' && matrix.mpi != 'msmpi' }}
 
-      - run: >
-          cmake
-          -G Ninja
-          -B ${{ github.workspace }}/build-mpi
-          -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
-          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-          -DMPI_GUESS_LIBRARY_NAME=MSMPI
-          -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
-          -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
-          -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
-          -S ${{ github.workspace }}
-          -L
-        if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' && matrix.mpi == 'msmpi' }}
+      # - run: >
+      #     cmake
+      #     -G Ninja
+      #     -B ${{ github.workspace }}/build-mpi
+      #     -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
+      #     -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+      #     -DMPI_GUESS_LIBRARY_NAME=MSMPI
+      #     -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
+      #     -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
+      #     -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
+      #     -S ${{ github.workspace }}
+      #     -L
+      #   if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' && matrix.mpi == 'msmpi' }}
 
-      - run: cmake --build ${{ github.workspace }}/build-mpi
+      # - run: cmake --build ${{ github.workspace }}/build-mpi
 
-      - run: ctest --output-on-failure --test-dir ${{ github.workspace }}/build-mpi
-        id: ctest
+      # - run: ctest --output-on-failure --test-dir ${{ github.workspace }}/build-mpi
+      #   id: ctest
 
-      - run: cat ${{ github.workspace }}/build-mpi/Testing/Temporary/LastTest.log
-        if: success() || steps.ctest.conclusion == 'failure'
+      # - run: cat ${{ github.workspace }}/build-mpi/Testing/Temporary/LastTest.log
+      #   if: success() || steps.ctest.conclusion == 'failure'
 
-      - run: cat ${{ github.workspace }}/build-mpi/phreeqcrm.pc
+      # - run: cat ${{ github.workspace }}/build-mpi/phreeqcrm.pc
