--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -310,13 +310,12 @@ jobs:
           -DCMAKE_BUILD_TYPE=Release
           -DCMAKE_INSTALL_PREFIX:=${{ github.workspace }}/yaml-cpp
           -S ${{ github.workspace }}/yaml-cpp-0.8.0
+          -L
         if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
 
       - run: cmake --build ${{ github.workspace }}/yaml-cpp-build --target install
 
-      - run: ls
-
-      # - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       # # Note: This allows ${{ env.VCPKG_INSTALLATION_ROOT }} to be used in the remaining steps
       # # Although its already set in the environment it can't be accessed using the env context
@@ -333,29 +332,58 @@ jobs:
       # - run: vcpkg install yaml-cpp:x64-windows
       #   if: ${{ runner.os == 'Windows' && matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
   
-      # - run: Get-Command cmake
-      #   if: ${{ runner.os == 'Windows' }}
+      - run: Get-Command cmake
+        if: ${{ runner.os == 'Windows' }}
 
-      # - run: Get-Command ninja
-      #   if: ${{ runner.os == 'Windows' }}
+      - run: Get-Command ninja
+        if: ${{ runner.os == 'Windows' }}
 
-      # - run: Get-Content "C:\Program Files (x86)\Intel\oneAPI\setvars.bat"
-      #   if: ${{ runner.os == 'Windows' }}
+      - run: Get-Content "C:\Program Files (x86)\Intel\oneAPI\setvars.bat"
+        if: ${{ runner.os == 'Windows' }}
 
-      # - run: Get-FileHash "C:\Program Files (x86)\Intel\oneAPI\setvars.bat"
-      #   if: ${{ runner.os == 'Windows' }}
+      - run: Get-FileHash "C:\Program Files (x86)\Intel\oneAPI\setvars.bat"
+        if: ${{ runner.os == 'Windows' }}
 
-      # - run: 'gci env: | Format-Table -Wrap -AutoSize'
-      #   if: ${{ runner.os == 'Windows' }}
+      - run: 'gci env: | Format-Table -Wrap -AutoSize'
+        if: ${{ runner.os == 'Windows' }}
 
-      # - run: |
-      #     where icl
-      #     where icx
-      #     where ifort
-      #     where ifx
-      #     where cmake
-      #     where ninja
-      #   if: ${{ runner.os == 'Windows' }}
+      - run: |
+          where icl
+          where icx
+          where ifort
+          where ifx
+          where cmake
+          where ninja
+        if: ${{ runner.os == 'Windows' }}
+
+      - run: >
+          cmake
+          -G Ninja
+          -B ${{ github.workspace }}/build-mpi
+          -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
+          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+          -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
+          -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
+          -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
+          -Dyaml-cpp_DIR=${{ github.workspace }}/yaml-cpp/lib/cmake/yaml-cpp
+          -S ${{ github.workspace }}
+          -L
+        if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' && matrix.mpi != 'msmpi' }}
+
+      - run: >
+          cmake
+          -G Ninja
+          -B ${{ github.workspace }}/build-mpi
+          -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
+          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+          -DMPI_GUESS_LIBRARY_NAME=MSMPI
+          -DPHREEQCRM_BUILD_MPI:BOOL=${{ matrix.phreeqcrm_build_mpi }}
+          -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
+          -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
+          -Dyaml-cpp_DIR=${{ github.workspace }}/yaml-cpp/lib/cmake/yaml-cpp
+          -S ${{ github.workspace }}
+          -L
+        if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' && matrix.mpi == 'msmpi' }}
 
       # - run: >
       #     cmake
@@ -413,12 +441,12 @@ jobs:
       #     -L
       #   if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' && matrix.mpi == 'msmpi' }}
 
-      # - run: cmake --build ${{ github.workspace }}/build-mpi
+      - run: cmake --build ${{ github.workspace }}/build-mpi
 
-      # - run: ctest --output-on-failure --test-dir ${{ github.workspace }}/build-mpi
-      #   id: ctest
+      - run: ctest --output-on-failure --test-dir ${{ github.workspace }}/build-mpi
+        id: ctest
 
-      # - run: cat ${{ github.workspace }}/build-mpi/Testing/Temporary/LastTest.log
-      #   if: success() || steps.ctest.conclusion == 'failure'
+      - run: cat ${{ github.workspace }}/build-mpi/Testing/Temporary/LastTest.log
+        if: success() || steps.ctest.conclusion == 'failure'
 
-      # - run: cat ${{ github.workspace }}/build-mpi/phreeqcrm.pc
+      - run: cat ${{ github.workspace }}/build-mpi/phreeqcrm.pc
