--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -178,7 +178,7 @@ jobs:
       fail-fast: false
       matrix:
         # os: [ubuntu-22.04, macos-12, windows-2019, windows-2022]
-        os: [windows-2019]
+        os: [ubuntu-22.04, windows-2019]
         toolchain:
           # - {compiler: gcc, version: 9}
           - {compiler: gcc, version: 13}
@@ -369,6 +369,7 @@ jobs:
 
       - run: >
           cmake
+          --debug-find-pkg=yaml-cpp
           -G Ninja
           -B ${{ github.workspace }}/build-mpi
           -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
@@ -382,6 +383,7 @@ jobs:
 
       - run: >
           cmake
+          --debug-find-pkg=yaml-cpp
           -G Ninja
           -B ${{ github.workspace }}/build-mpi
           -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }}
